--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,9 @@
     <dependencies>
         <dependency>
     		<groupId>javax.servlet</groupId>
-    		<artifactId>javax.servlet-api</artifactId>
-    		<version>4.0.1</version>
-    		<scope>provided</scope>
-	    </dependency>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>
     </dependencies>
 
 
@@ -52,3 +51,4 @@
         </plugins>
     </build>
 </project>
+
