--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,10 @@
     <dependencies>
         <dependency>
     		<groupId>javax.servlet</groupId>
-    		<artifactId>jstl</artifactId>
-    		<version>1.2</version>
-		</dependency>
+    		<artifactId>javax.servlet-api</artifactId>
+    		<version>4.0.1</version>
+    		<scope>provided</scope>
+	    </dependency>
     </dependencies>
 
 
@@ -51,4 +52,3 @@
         </plugins>
     </build>
 </project>
-
