--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-  			<groupId>javax.servlet</groupId>
-  			<artifactId>jstl</artifactId>
-  			<version>1.2</version>
-		</dependency>
-    </dependencies>
+   	<dependencies>
+    	<!-- JSTL cho JSP -->
+    	<dependency>
+        	<groupId>jstl</groupId>
+        	<artifactId>jstl</artifactId>
+        	<version>1.2</version>
+    	</dependency>
+
+    <!-- Servlet API, chỉ dùng khi compile, Tomcat runtime đã có -->
+    	<dependency>
+        	<groupId>javax.servlet</groupId>
+        	<artifactId>javax.servlet-api</artifactId>
+        	<version>4.0.1</version>
+        	<scope>provided</scope>
+    	</dependency>
+	</dependencies>
 
 
     <build>
@@ -51,5 +60,6 @@
         </plugins>
     </build>
 </project>
+
 
 
